# movekr-be

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  mix.exs  rustfmt.toml
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: movekr.ex  movekr_web.ex
lib/movekr/: accounts.ex  application.ex  projects.ex  repo.ex
lib/movekr/accounts/: user.ex
lib/movekr/projects/: column.ex  project.ex  task.ex
lib/movekr_web/: endpoint.ex  gettext.ex  router.ex  schema.ex  telemetry.ex
lib/movekr_web/channels/: user_socket.ex
lib/movekr_web/resolvers/: Projects_resolver.ex  accounts_resolver.ex
lib/movekr_web/schema/: data_types.ex
lib/movekr_web/views/: error_helpers.ex  error_view.ex
migrations/00000000000000_diesel_initial_setup/: up.sql
priv/repo/: seeds.exs
priv/repo/migrations/: 20210607004103_create_users.exs  20210607005148_create_projects.exs  20210607005318_create_columns.exs  20210607005405_create_tasks.exs
src/: accounts.rs  main.rs  openapi.json
src/db/: mod.rs  schema.rs
src/db/models/: mod.rs  user.rs
test/: test_helper.exs
test/movekr/: accounts_test.exs  projects_test.exs
test/movekr_web/views/: error_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
